# local-agent-memory

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: architecture.md  mvp.md  tasks.md
scripts/: dev-up.sh  format.sh  test.sh  verify-planning-docs.sh
src/local_agent_memory/: __init__.py  api.py  cli.py  mcp_server.py  models.py  service.py  storage.py  web.py
tests/: test_api.py  test_cli.py  test_mcp_server.py  test_scaffold.py  test_service.py  test_storage.py
