[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "local-agent-memory"
version = "0.1.0"
description = "Local-first memory manager for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "local-agent-memory contributors" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "ruff>=0.5",
]

[project.scripts]
lam = "local_agent_memory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/local_agent_memory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

